@@ -4,3 +4,4 @@
 > Fix water cannon always working
 > Fix radial menu controls unaffected by rebinding attack/use item controls
 > Fix water arc statctrl removed when creating another water arc
+> Fix crash when killing player inside ice shield
